--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -152,7 +152,7 @@
         </div>
       </div>
 
-      <button (click)="handleSubmitAll()" [disabled]="examForm.invalid" type="submit">Tạo bài thi</button>
+      <button [disabled]="examForm.invalid" type="submit">Tạo bài thi</button>
     </form>
   </div>
 </div>
