--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
@@ -15,6 +15,7 @@
     <button (click)="generateQuestions()" class="generate-button">
       Tạo câu hỏi
     </button>
+    <button (click)="handleSubmitAll()"  class="generate-button">Xong</button>
   </div>
 </div>
 
