--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
@@ -6,7 +6,7 @@
              placeholder="Nhập tên đề thi"
              type="text">
       <div class="create-button">
-        <button (click)="navigateToCreatExam()">Tạo đề mới</button>
+        <button (click)="navigateToCreateExam()">Tạo đề mới</button>
       </div>
     </div>
   </div>
