feat: add routing for question bank component and enhance navigation logic in create auto-generate component

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="form-wrap">
     <form (ngSubmit)="onSubmit()" [formGroup]="examForm">
-      <h2 class="exam-info">Thông tin bài thi</h2>
+      <h2 class="exam-info">Thông tin đề thi</h2>
 
       <div class="row-wrapper">
         <div class="input-wrapper">
