style: improve layout and formatting in question components for consistency

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
@@ -10,12 +10,14 @@
         type="number"
       />
       <label for="grade">Số điểm</label>
-      <input class="number-input" id="grade" type="number"/>
+      <input class="number-input" id="grade" type="number" />
     </div>
     <button (click)="generateQuestions()" class="generate-button">
       Tạo câu hỏi
     </button>
-    <button (click)="handleSubmitAll()"  class="generate-button">Thêm câu hỏi</button>
+    <button (click)="handleSubmitAll()" class="generate-button">
+      Thêm câu hỏi
+    </button>
   </div>
 </div>
 
