style: improve code formatting and clean up whitespace across multiple components

--- a/src/app/pages/student/exam-session-detail/exam-session-detail.component.html
+++ b/src/app/pages/student/exam-session-detail/exam-session-detail.component.html
@@ -35,10 +35,10 @@
       </tbody>
     </table>
 
-    <div #passwordForm [class.visible]="isPassword" class="password-form" (click)="closePasswordModal($event)">
-      <div class="container" (click)="$event.stopPropagation()">
+    <div #passwordForm (click)="closePasswordModal($event)" [class.visible]="isPassword" class="password-form">
+      <div (click)="$event.stopPropagation()" class="container">
         <!-- Exam information section -->
-        <div class="exam-info" *ngIf="selectedExam">
+        <div *ngIf="selectedExam" class="exam-info">
           <h2>{{ selectedExam.name }}</h2>
           <div class="exam-details">
             <p><span>Loại đề:</span> {{ selectedExam.type }}</p>
