--- a/src/app/pages/user/teacher-user/teacher-user.component.html
+++ b/src/app/pages/user/teacher-user/teacher-user.component.html
@@ -1,4 +1,4 @@
-<app-user-form [onGetInfo] ="onGetUserInfo" [UserInfo] = "userInfo" [role] = "'teacher'" >
+<app-user-form [UserInfo]="userInfo" [onGetInfo]="onGetUserInfo" [role]="'teacher'">
   <div role="note">Giáo viên</div>
 
 </app-user-form>
