--- a/src/app/pages/user/student-user/student-user.component.html
+++ b/src/app/pages/user/student-user/student-user.component.html
@@ -1,4 +1,4 @@
-<app-user-form [onGetInfo] ="onGetUserInfo" [UserInfo] = "userInfo" [role] = "'student'" >
+<app-user-form [UserInfo]="userInfo" [onGetInfo]="onGetUserInfo" [role]="'student'">
   <div role="note">Học sinh</div>
 
-</app-user-form >
+</app-user-form>
