--- a/src/app/shared/components/user-form/user-form.component.html
+++ b/src/app/shared/components/user-form/user-form.component.html
@@ -13,9 +13,10 @@
   <div class="content">
     <!-- Phần avatar và thông tin người dùng -->
     <div class="profile">
-      <img alt="mặt Tỏ" class="avatar" id="avatar-image" src="https://images.aeonmedia.co/images/acd6897d-9849-4188-92c6-79dabcbcd518/essay-final-gettyimages-685469924.jpg?width=3840&quality=75&format=auto">
+      <img alt="mặt Tỏ" class="avatar" id="avatar-image"
+           src="https://images.aeonmedia.co/images/acd6897d-9849-4188-92c6-79dabcbcd518/essay-final-gettyimages-685469924.jpg?width=3840&quality=75&format=auto">
       <div class="profile-info">
-        <div class="profile-name">{{UserInfo.user.fullName}}</div>
+        <div class="profile-name">{{ UserInfo.user.fullName }}</div>
         <!-- Input file ẩn -->
         <input accept="image/*" id="avatar-upload" style="display: none;" type="file">
         <!-- Nút thay đổi ảnh đại diện -->
@@ -68,13 +69,15 @@
           <div class="change-password-section">
             <h4>Đổi mật khẩu</h4>
             <div class="form-group">
-              <input formControlName="currentPassword" id="current-password" placeholder="Mật khẩu hiện tại" type="password">
+              <input formControlName="currentPassword" id="current-password" placeholder="Mật khẩu hiện tại"
+                     type="password">
             </div>
             <div class="form-group">
               <input formControlName="newPassword" id="new-password" placeholder="Mật khẩu mới" type="password">
             </div>
             <div class="form-group">
-              <input formControlName="confirmPassword" id="confirm-password" placeholder="Xác nhận mật khẩu mới" type="password">
+              <input formControlName="confirmPassword" id="confirm-password" placeholder="Xác nhận mật khẩu mới"
+                     type="password">
             </div>
             <button class="btn btn-change-password" type="submit">Đổi mật khẩu</button>
           </div>
