feat: refactor exam component to support file upload and real-time notifications via WebSocket

--- a/src/app/pages/student/do-test-upload/do-test-upload.component.html
+++ b/src/app/pages/student/do-test-upload/do-test-upload.component.html
@@ -8,6 +8,7 @@
       <div class="counter">
         <p>{{ getFormattedTime() }}</p>
       </div>
+      <div class="ws-status" [class.connected]="isConnected" title="Trạng thái kết nối"></div>
     </div>
     <div class="answer-sheet">
       <div class="subject">
