--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
@@ -1,28 +1,32 @@
 <body>
 <header class="header">
-  <div class="wraper-logo">
+  <div class="wrapper-logo">
     <div class="logo">Online Exam Portal</div>
     <nav class="breadcrumb">
       <span>►</span>
-      <span>Kỳ thi: {{ exam_session_name }}-{{ exam_session_description }}</span>
+      <span>Kỳ thi: {{ exam_session_name }}-{{ exam_session_description }}</span>
     </nav>
   </div>
   <div class="return-button">
-    <button (click)="goBack()">Quay lại</button>
+    <button (click)="goBack()">
+      <i class="fa fa-arrow-left"></i> Quay lại
+    </button>
   </div>
 </header>
 
 <div class="sidebar">
   <ul class="navigate-option">
     <li (click)="clickActive($event, 'home')" class="option active">
-      Thông tin chung
+      <i class="fa fa-home"></i> Thông tin chung
     </li>
     <li (click)="clickActive($event, 'student-list-point')" class="option">
-      Thống kê điểm
+      <i class="fa fa-bar-chart"></i> Thống kê điểm
     </li>
-    <li (click)="clickActive($event, 'exam-session')" class="option">Đề thi</li>
+    <li (click)="clickActive($event, 'exam-session')" class="option">
+      <i class="fa fa-file-text"></i> Đề thi
+    </li>
     <li (click)="clickActive($event, 'question-bank')" class="option">
-      Kho câu hỏi
+      <i class="fa fa-database"></i> Kho câu hỏi
     </li>
   </ul>
 </div>
