feat: refactor exam creation components for improved readability and maintainability

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
@@ -6,7 +6,7 @@
         <span>►</span>
         <span>Kỳ thi: {{ exam_session_name }}-{{ exam_session_description }}</span>
         <span>►</span>
-        <span>Tạo đề mới</span>
+        <span>Thêm câu hỏi</span>
       </nav>
     </div>
     <div class="return-button">
