--- a/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
@@ -7,7 +7,7 @@
     </nav>
   </div>
   <div class="return-button">
-    <button (click)="goBack()">quay lại</button>
+    <button (click)="goBack()">Quay lại</button>
   </div>
 </header>
 
