feat: enhance student and teacher user forms with navigation improvements and style updates

--- a/src/app/pages/home/student-home/student-home.component.html
+++ b/src/app/pages/home/student-home/student-home.component.html
@@ -4,7 +4,7 @@
 <aside class="sidebar-links">
   <div class="links-wrap">
     <a (click)="scrollToSection('schedule')" class="link-item">Lịch thi hôm nay</a>
-    <a (click)="scrollToSection('unfished-exam-session')" class="link-item">Bài thi chưa làm</a>
+    <a (click)="scrollToSection('unfished-exam')" class="link-item">Bài thi chưa làm</a>
     <a (click)="scrollToSection('achievement')" class="link-item">Thành tích</a>
   </div>
 </aside>
